crates/macros/tests/debug_job/fail/wrong_return_type.rs
use blueprint_macros::debug_job;

#[debug_job]
async fn job() -> bool {
    false
}

fn main() {}
