crates/macros/tests/debug_job/fail/wrong_return_type.stderr
error[E0277]: the trait bound `bool: IntoJobResult` is not satisfied
 --> tests/debug_job/fail/wrong_return_type.rs:4:19
  |
4 | async fn job() -> bool {
  |                   ^^^^ the trait `IntoJobResult` is not implemented for `bool`
  |
  = help: the following other types implement trait `IntoJobResult`:
            &'static [u8; N]
            &'static [u8]
            &'static str
            ()
            (JobResult<()>, R)
            (JobResult<()>, T1, R)
            (JobResult<()>, T1, T2, R)
            (JobResult<()>, T1, T2, T3, R)
          and $N others
note: required by a bound in `__blueprint_macros_check_job_into_job_result::{closure#0}::check`
 --> tests/debug_job/fail/wrong_return_type.rs:4:19
  |
4 | async fn job() -> bool {
  |                   ^^^^ required by this bound in `check`
